<resources>
    <string name="app_name">UTA Car Rental</string>
    <string name="title_activity_user_homepage">UserHomepage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="username">Enter your username</string>
    <string name="password">Enter your password</string>
    <string name="UTAID">UTAID</string>
    <string name="contact">Phone or Email</string>
    <string name="lastname">Last Name</string>
    <string name="firstname">First Name</string>
    <string name="role">Role</string>
    <string name="street">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zip Code</string>
    <string name="ismember">Arlington auto club member</string>

    <string name="login">Log In</string>
    <string name="Register">Register</string>

    <string name="logout">Log Out</string>
    <string name="changepassword">Change Password</string>
    <string name="save">Save</string>
    <string name="updatepassword">Update Password</string>
    <string name="oldpassword">Old password</string>
    <string name="newpassword">New password</string>
    <string name="confirmnewpassword">Confirm new password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_upadate_profile">UpadateProfile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
