<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.common.Register">

    <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"/>

    <Button
            android:id="@+id/Register"
            android:layout_width="91dp"
            android:layout_height="46dp"
            android:onClick="register"
            android:text="@string/Register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ismember"
            android:layout_marginTop="30dp"/>

    <Spinner
            android:id="@+id/role"
            android:layout_width="180dp"
            android:layout_height="27dp"
            android:layout_marginTop="20dp"
            android:entries="@array/role"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintHorizontal_bias="0.497"/>

    <EditText
            android:id="@+id/UTAID"
            android:layout_width="147dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/UTAID"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/role"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"/>

    <EditText
            android:id="@+id/phoneoremail"
            android:layout_width="147dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/contact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/role"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintStart_toEndOf="@+id/UTAID"/>

    <EditText
            android:id="@+id/zipcode"
            android:layout_width="147dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/zipcode"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/state"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintTop_toBottomOf="@+id/city"
            android:layout_marginTop="20dp"/>

    <EditText
            android:id="@+id/street"
            android:layout_width="147dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/street"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toBottomOf="@+id/firstname"
            android:layout_marginTop="20dp"/>

    <EditText
            android:id="@+id/state"
            android:layout_width="147dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/state"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toBottomOf="@+id/city"
            android:layout_marginTop="20dp"/>

    <EditText
            android:id="@+id/lastname"
            android:layout_width="147dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toBottomOf="@+id/phoneoremail"
            android:layout_marginTop="20dp"/>

    <EditText
            android:id="@+id/city"
            android:layout_width="147dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/street"
            app:layout_constraintTop_toBottomOf="@+id/firstname"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintHorizontal_bias="0.513"/>

    <EditText
            android:id="@+id/firstname"
            android:layout_width="147dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lastname"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintTop_toBottomOf="@+id/phoneoremail"
            android:layout_marginTop="20dp"/>

    <CheckBox
            android:text="Arlington auto club member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ismember"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zipcode"
            android:layout_marginTop="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>